force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_comme__x/dw_ecard_archive_ecard_discrepancy_comme__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_archive$ecard_discrepancy_comments</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_archive$ecard_discrepancy_comments</externalName>
    <label>dw_ecard_archive$ecard_discrepancy_comme</label>
    <pluralLabel>dw_ecard_archive$ecard_discrepancy_comme</pluralLabel>
</CustomObject>