force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_comme__x/fields/commentedby_id__c.field-meta.xml
<CustomField>
    <fullName>commentedby_id__c</fullName>
    <description>commentedby_id</description>
    <externalDeveloperName>commentedby_id</externalDeveloperName>
    <label>commentedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>