force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_comme__x/fields/createdby_id__c.field-meta.xml
<CustomField>
    <fullName>createdby_id__c</fullName>
    <description>createdby_id</description>
    <externalDeveloperName>createdby_id</externalDeveloperName>
    <label>createdby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>