force-app/main/default/objects/dw_ecard_archive_ecard_discrepancy_comme__x/fields/discrepancy_comments__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_comments__c</fullName>
    <description>discrepancy_comments</description>
    <externalDeveloperName>discrepancy_comments</externalDeveloperName>
    <label>discrepancy_comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>